@@ -140,14 +140,7 @@ class MenuTop {
         }
 
         // Commercial
-        /*$showcommercial=0;
-        if ($conf->societe->enabled)   $showcommercial=1;
-        if ($conf->propal->enabled)    $showcommercial=1;
-        if ($conf->commande->enabled)  $showcommercial=1;
-        if ($conf->contrat->enabled)   $showcommercial=1;
-        if ($conf->ficheinter->enabled) $showcommercial=1;
-        if ($showcommercial)*/
-		if ($conf->commercial->enabled)
+		if ($conf->societe->enabled)
         {
 	        $langs->load("commercial");
 
@@ -350,14 +343,14 @@ class MenuTop {
             	if (! $this->hideifnotallowed) print '<td class="tmenu"><a class="tmenudisabled" '.$idsel.'href="#">'.$langs->trans("MenuMembers").'</a></td>';
         	}
         }
-        
-        
+
+
         // Affichage des menus personnalises
        	require_once(DOL_DOCUMENT_ROOT."/core/menubase.class.php");
-       	
+
        	$menuArbo = new Menubase($this->db,'eldy','top');
        	$tabMenu = $menuArbo->menuTopCharger(0,$_SESSION['mainmenu'],'eldy');
-       	
+
        	for($i=0; $i<count($tabMenu); $i++)
         {
         	if ($tabMenu[$i]['enabled'] == true)
